# docs/swagger.json
@@ -15,6 +15,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "admin"
+                ],
                 "summary": "查看管理员",
                 "responses": {
                     "200": {
@@ -26,10 +29,13 @@
                 }
             }
         },
-        "/api/client/sessions": {
+        "/api/admin/sessions": {
             "post": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "admin"
                 ],
                 "summary": "管理员登入",
                 "parameters": [
@@ -62,10 +68,52 @@
                 }
             }
         },
+        "/api/client/sessions": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "client"
+                ],
+                "summary": "客户端用户登入",
+                "parameters": [
+                    {
+                        "description": "手机号",
+                        "name": "phone",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "手机验证码",
+                        "name": "vcode",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":200,\"message\":\"ok\",\"data\":{}}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/common/captcha": {
             "get": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "common"
                 ],
                 "summary": "获取图形验证码",
                 "responses": {
@@ -82,6 +130,9 @@
             "get": {
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "common"
                 ],
                 "summary": "获取手机验证码",
                 "parameters": [
